# neural-harmonic-textures

./: .gitattributes  .gitignore  .gitmodules  ATTRIBUTIONS.md  CONTRIBUTING.md  NEURAL_HARMONIC_TEXTURES_KR.md  README.md  formatter.sh  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: ci.yaml
aov/: __init__.py  aov_dataset.py  deferred_shader.py
aov/examples/: gsplat_viewer_nht_aov.py  simple_trainer_nht_aov.py  simple_viewer_nht_aov.py
benchmarks/: basic_nht.sh  benchmark_nht.py
benchmarks/nht/: benchmark_baselines_high.ps1  benchmark_baselines_high.sh  benchmark_nht.ps1  benchmark_nht.sh  benchmark_nht_aov.ps1  benchmark_nht_aov.sh  benchmark_nht_high.ps1  benchmark_nht_high.sh  benchmark_nht_split.ps1  benchmark_nht_split.sh
scripts/: download_data.ps1  download_data.sh  eval.ps1  eval.sh  train.ps1  train.sh  view.ps1  view.sh
tests/: test_nht_aov.py
