# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Editable install for superproject-only helpers (AOV dataset, examples).
# Run from repo root: pip install -e .

[build-system]
requires = ["setuptools>64,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "nht"
version = "0.0.0"
description = "NHT release (dataset wrapper and training/view scripts)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools>64,<80",
    "wheel",
    "ninja",
    "numpy",
    "rich",
    "torch==2.9.1",
    "torchvision==0.24.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.setuptools.packages.find]
where = ["."]
include = ["aov*"]

[[tool.uv.index]]
# The PyTorch index is controlled externally by setting UV_INDEX="pytorch=<index_url>"
name = "pytorch"
url = "https://download.pytorch.org/whl"
default = true
